--- a/m4dt.ipynb
+++ b/m4dt.ipynb
@@ -17,7 +17,7 @@
     "  * Video - [Introduction to Mathematics for Digital Technologies](http://www.youtube.com)\n",
     "\n",
     "* **Basic of Python and NumPy**\n",
-    "  * Video - [Python Basics](http://www.youtube.com)\n",
+    "  * Video - [Python Basics](https://www.youtube.com/embed/28-oixCfK9c)\n",
     "  * Video - [Introduction to NumPy and Matplotlib](http://www.youtube.com)\n",
     "  * Lab - Basic of Python,NumPy and Matplotlib [[Python](./Basics_of_Python_and_NumPy/Python%20Basics.ipynb)]\n",
     "  \n",
