--- a/m4dt.ipynb
+++ b/m4dt.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "* **Basic of Python and NumPy**\n",
     "  * Video - [Python Basics](https://www.youtube.com/embed/28-oixCfK9c)\n",
-    "  * Video - [Introduction to NumPy and Matplotlib](http://www.youtube.com)\n",
+    "  * Video - [Introduction to NumPy and Matplotlib](https://www.youtube.com/embed/cZGGtxUTNIg)\n",
     "  * Lab - Basic of Python,NumPy and Matplotlib [[Python](./Basics_of_Python_and_NumPy/Python%20Basics.ipynb)]\n",
     "  \n",
     "* **Linear Algebra**\n",
