--- a/m4dt.ipynb
+++ b/m4dt.ipynb
@@ -27,7 +27,7 @@
     "* **Linear Algebra**\n",
     "  * Video - [What are Linear Equations?](https://www.youtube.com/watch?v=CWByMDHyTos)\n",
     "  * Video - [What are Functions?](https://www.youtube.com/watch?v=P3LsdcjqS8s)\n",
-    "  * Video - [Introduction to Vectors](http://www.youtube.com)\n",
+    "  * Video - [Introduction to Vectors](http://www.youtube.com/watch?v=CMJlwIobuF4)\n",
     "  * Lab - Understanding Linear Algebra [[Python](./Basics_of_Python_and_Numpy/Basics_of_Python_and_Numpy.ipynb)]\n",
     "\n",
     "* **Introduction to Matrices**\n",
