Updated Labs - Milestone 2

--- a/Introduction_to_Matrices/Introduction_to_Matrices.ipynb
+++ b/Introduction_to_Matrices/Introduction_to_Matrices.ipynb
@@ -10,6 +10,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"860\"\n",
+       "            height=\"460\"\n",
+       "            src=\"https://www.youtube.com/embed/DQUIj5XoDao\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x215b62a04c8>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo('DQUIj5XoDao', width=860, height=460)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,17 +60,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M = np.array([[1,2,3],[4,-3,6],[7,8,0]])\n",
+    "import numpy as np\n",
+    "\n",
+    "M = np.array([[1,2,3],[4,5,6],[7,8,0]])\n",
     "\n",
     "N = np.array([[1,1,1],[2,2,2],[3,3,3]])\n",
     "\n",
-    "print(\"\\n Matrix M:  \\n\", M)\n",
+    "print(\"\\n Matrix M : \", M)\n",
     "\n",
-    "print(\"\\nRank of M : \", np.linalg.matrix_rank(M))\n",
+    "print(\"\\n Matrix N : \", N)\n",
     "\n",
-    "print(\"\\nTranspose of M:  \\n\", np.transpose(M))\n",
+    "print(\"\\n Rank of M :\", np.linalg.matrix_rank(M))\n",
     "\n",
-    "print(\"\\n Matrix Dot Product using np.matmul: \\n\", np.matmul(M,N))"
+    "print(\"\\n Transpose of M :\", np.transpose(M))\n",
+    "\n",
+    "print (\"\\n Matrix Dot Product : \", np.matmul(M,N))"
    ]
   },
   {
@@ -52,21 +88,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"860\"\n",
+       "            height=\"460\"\n",
+       "            src=\"https://www.youtube.com/embed/Vq1tSPVQcPs\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x215b62e7b88>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo('Vq1tSPVQcPs', width=860, height=460)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "\"\"\"\n",
-    "3x  + 4y = 20\n",
+    "3x +4y = 20\n",
+    "\n",
     "-4x + 9y = 26\n",
     "\"\"\"\n",
     "\n",
-    "A = np.array([[4, 5], [-5, 8]])\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[3,4],[-4, 9]])\n",
     "\n",
     "B = np.array([20, 26])\n",
-    "X = np.linalg.inv(A).dot(B)\n",
+    "\n",
+    "X= np.linalg.inv(A).dot(B)\n",
     "\n",
     "print(X)"
    ]
@@ -75,7 +145,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eigenvalues and eigenvectors"
+    "### Eigenvalues and eigenvectors\n",
+    "\n",
+    "Eigenvalues and eigenvectors form the basics of computing and mathematics. They are heavily used by scientists  reduce the dimension space. Eigenvector is a vector that does not change when a transformation is applied to it, except that it becomes a scaled version of the original vector. Eigenvectors can help us calculating an approximation of a large matrix as a smaller vector. Similarly Eigenvalue is the scalar that is used to transform (stretch) an Eigenvector. \n",
+    "\n",
+    "In Linear Algebra, a scalar λ  is called an eigenvalue of matrix A if there exists a column vector v such that\n",
+    "\n",
+    "$Av = \\lambda v$\n",
+    "\n",
+    "and v is non-zero. Any vector satisfying the above relation is known as eigenvector of the matrix A  corresponding to the eigen value. Lets understand this more deeply in the video below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"860\"\n",
+       "            height=\"460\"\n",
+       "            src=\"https://www.youtube.com/embed/0Y1xztCb434\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x215b62f4d08>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo('0Y1xztCb434', width=860, height=460)"
    ]
   },
   {
@@ -83,7 +193,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([[10,5],[4,4]])\n",
+    "\n",
+    "w, v  = np.linalg.eig(a)\n",
+    "\n",
+    "print(w)\n",
+    "print(v)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,6 +235,15 @@
     "\t1 & 0 & 3 \n",
     "\t\\end{bmatrix} \n",
     "\t.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
    ]
   }
  ],
