--- a/m4dt.ipynb
+++ b/m4dt.ipynb
@@ -31,16 +31,16 @@
     "  * Lab - Understanding Linear Algebra [[Python](./Equations_Functions_Vectors/Equations_Functions_Vectors.ipynb)]\n",
     "\n",
     "* **Introduction to Matrices**\n",
-    "  * Video - [Introduction to Matrices](http://www.youtube.com)\n",
-    "  * Video - [Solving Linear Equations with Matrices](http://www.youtube.com)\n",
-    "  * Video - [What are Eigenvalues and Eigenvectors?](http://www.youtube.com)\n",
+    "  * Video - [Introduction to Matrices](https://www.youtube.com/watch?v=DQUIj5XoDao)\n",
+    "  * Video - [Solving Linear Equations with Matrices](https://www.youtube.com/watch?v=Vq1tSPVQcPs)\n",
+    "  * Video - [What are Eigenvalues and Eigenvectors?](https://www.youtube.com/watch?v=0Y1xztCb434)\n",
     "  * Lab - Introduction to Matrices [[Python](./Introduction_to_Matrices/Introduction_to_Matrices.ipynb)]\n",
     "\n",
     "* **Basics of Calculus**\n",
-    "  * Video - [What is the rate of change?](http://www.youtube.com)\n",
-    "  * Video - [Introduction to differentiation](http://www.youtube.com)\n",
-    "  * Video - [Introduction to Integration](http://www.youtube.com)\n",
-    "  * Lab - Basics of Calculus [[Python](./Basics_of_Python_and_Numpy/Basics_of_Python_and_Numpy.ipynb)]\n",
+    "  * Video - [What is the rate of change?](https://www.youtube.com/watch?v=K2jQ0AGbYaA)\n",
+    "  * Video - [Introduction to differentiation](https://www.youtube.com/watch?v=a5WVw9vmGHU)\n",
+    "  * Video - [Introduction to Integration](https://www.youtube.com/watch?v=5pwZchmmgF0)\n",
+    "  * Lab - Basics of Calculus [[Python](./Basics_of_Calculus/Basics_of_Calculus.ipynb)]\n",
     "  \n",
     "* **Statistics and Probability**\n",
     "  * Video - [Introduction to Statistics](http://www.youtube.com)\n",
