--- a/Introduction_to_Matrices/Introduction_to_Matrices.ipynb
+++ b/Introduction_to_Matrices/Introduction_to_Matrices.ipynb
@@ -56,9 +56,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Matrix M :  [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 0]]\n",
+      "\n",
+      " Matrix N :  [[1 1 1]\n",
+      " [2 2 2]\n",
+      " [3 3 3]]\n",
+      "\n",
+      " Rank of M : 3\n",
+      "\n",
+      " Transpose of M : [[1 4 7]\n",
+      " [2 5 8]\n",
+      " [3 6 0]]\n",
+      "\n",
+      " Matrix Dot Product :  [[14 14 14]\n",
+      " [32 32 32]\n",
+      " [23 23 23]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
